# -patroller

./: .gitignore  LICENSE  README.md  integration-test-report.md
agent/: .gitignore  pyproject.toml  python.pid  requirements.txt  run.py
agent/agent/: __init__.py  alert.py  backend_client.py  config.py  config.yaml  main.py  tray.py
agent/agent/api/: __init__.py  server.py
agent/agent/controllers/: baseline.py  responder.py  smart_control.py  state.py  tuner.py
agent/agent/detectors/: __init__.py  llm_analyzer.py  ml_anomaly.py  yara_detector.py
agent/agent/monitors/: __init__.py  directory_integrity.py  process_monitor.py  registry_monitor.py  service_monitor.py  system_resource.py  usb_control.py
agent/agent/sandbox/: __init__.py  manager.py  reporter.py
agent/rules/: sample.yar  suspicious_commands.yar
agent/tests/: test_alert.py  test_api.py  test_backend_client.py  test_integration.py  test_llm_analyzer.py  test_ml_anomaly.py  test_process_monitor.py  test_smart_control.py  test_system_resource.py  test_usb_control.py  test_yara.py
backend/: .env.example  ecosystem.config.js  package-lock.json  package.json  sea-config.json  start-backend.bat  vitest.config.ts
backend/src/: app.ts  config.ts  (+1 more)
commander/: electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.node.json
mobile/: app.json  package-lock.json  package.json
scripts/: ChineseSimplified.isl  build-agent.ps1  build-all.ps1  patroller-agent.iss  patroller-backend.iss  patroller-unified.iss  patroller-user.iss  start-all.ps1  stop-all.ps1
(+64 files in other folders)
